--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
       <p class="name">Sai Arunesh</p>
       <p class="descr">I am a <b>UI Developer</b></p>
     </div>
-    <section id="about">
+    <section id="about-me">
       <div class="about">
         <div class="dp">
           <img class="dp-img" src="./assets/dp.png" alt="display_picture" />
         </div>
-        <div class="desc">
+        <div class="desc" id="about">
           <p class="title">About me</p>
           <p class="about-me">
             Skilled in Embedded Programming, Internet of Things, Python, C,
