added resume link

--- a/index.html
+++ b/index.html
@@ -35,5 +35,13 @@
         </div>
       </div>
     </section>
+    <div class="download">
+      <p class="title in">Download Resume</p>
+      <a
+        href="https://drive.google.com/file/d/12XF1XNfXPrBEMd1HpbB1QULQnA8CMxUa/view?usp=sharing"
+      >
+        <img class="download-icon" src="./assets/download.png" alt="" />
+      </a>
+    </div>
   </body>
 </html>
