added bg color to download resume

--- a/index.html
+++ b/index.html
@@ -36,11 +36,17 @@
       </div>
     </section>
     <div class="download">
-      <p class="title in">Download Resume</p>
       <a
         href="https://drive.google.com/file/d/12XF1XNfXPrBEMd1HpbB1QULQnA8CMxUa/view?usp=sharing"
       >
-        <img class="download-icon" src="./assets/download.png" alt="" />
+        <div class="download-wrapper">
+          <p class="title in">Download Resume</p>
+          <a
+            href="https://drive.google.com/file/d/12XF1XNfXPrBEMd1HpbB1QULQnA8CMxUa/view?usp=sharing"
+          >
+            <img class="download-icon" src="./assets/download.png" alt="" />
+          </a>
+        </div>
       </a>
     </div>
   </body>
