added download resume to nav bar

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="header">
       <ul class="header-ul">
         <li><a href="#about">About</a></li>
+        <li><a href="#resume">Download Resume</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
@@ -44,7 +45,12 @@
           <a
             href="https://drive.google.com/file/d/12XF1XNfXPrBEMd1HpbB1QULQnA8CMxUa/view?usp=sharing"
           >
-            <img class="download-icon" src="./assets/download.png" alt="" />
+            <img
+              id="resume"
+              class="download-icon"
+              src="./assets/download.png"
+              alt=""
+            />
           </a>
         </div>
       </a>
