--- a/index.html
+++ b/index.html
@@ -54,6 +54,25 @@
           </a>
         </div>
       </a>
+      <section id="contact">
+        <div class="contact">
+          <p class="title">Reach out to me on</p>
+          <a href="https://www.linkedin.com/in/sai-arunesh-v-s-b1063b166/">
+            <img
+              class="icon"
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSv1TRjzY8iaO307JPz_hy2EW8BB7xqzbR83w&usqp=CAU"
+              alt="https://www.linkedin.com/in/sai-arunesh-v-s-b1063b166/"
+            />
+          </a>
+          <a href="https://wa.me/919500161982">
+            <img
+              class="icon"
+              src="https://www.freepnglogos.com/uploads/whatsapp-circle-message-messaging-messenger-round-icon--24.png"
+              alt=""
+            />
+          </a>
+        </div>
+      </section>
     </div>
   </body>
 </html>
