centered about me on 1676px

--- a/index.html
+++ b/index.html
@@ -57,14 +57,17 @@
       <section id="contact">
         <div class="contact">
           <p class="title">Reach out to me on</p>
-          <a href="https://www.linkedin.com/in/sai-arunesh-v-s-b1063b166/">
+          <a
+            href="https://www.linkedin.com/in/sai-arunesh-v-s-b1063b166/"
+            target="_blank"
+          >
             <img
               class="icon"
               src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSv1TRjzY8iaO307JPz_hy2EW8BB7xqzbR83w&usqp=CAU"
               alt="https://www.linkedin.com/in/sai-arunesh-v-s-b1063b166/"
             />
           </a>
-          <a href="https://wa.me/919500161982">
+          <a href="https://wa.me/919500161982" target="_blank">
             <img
               class="icon"
               src="https://www.freepnglogos.com/uploads/whatsapp-circle-message-messaging-messenger-round-icon--24.png"
