--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       </nav>
       <div class="introduction">
         <div class="intro-text">
-          <h1>TITLE TEXT</h1>
-          <p>DESCRIPTION</p>
+          <h1>Sai Arunesh</h1>
+          <p>I am a <b>UI Developer</b></p>
         </div>
       </div>
     </section>
@@ -36,17 +36,14 @@
           </div>
         </div>
         <div class="about-me-details">
-          <h1 class="title">About Me</h1>
-          <p class="info">
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text
-            ever since the 1500s, when an unknown printer took a galley of type
-            and scrambled it to make a type specimen book. It has survived not
-            only five centuries, but also the leap into electronic typesetting,
-            remaining essentially unchanged. It was popularised in the 1960s
-            with the release of Letraset sheets containing Lorem Ipsum passages,
-            and more recently with desktop publishing software like Aldus
-            PageMaker including versions of Lorem Ipsum.
+          <h1>About Me</h1>
+          <p>
+            Hi, I am Sai Arunesh, 22 years old UI Developer working at
+            Caterpillar Skilled in Embedded Programming, Internet of Things,
+            Python, C, C++,, Raspberry Pi, Arduino, Beagle Bone Black and front
+            end web development. Graduated with Bachelor of Engineering degree
+            focused in Electronics and Communication Engineering from MIT, Anna
+            University
           </p>
         </div>
       </section>
