--- a/index.html
+++ b/index.html
@@ -38,15 +38,16 @@
         <div class="about-me-details">
           <h1>About Me</h1>
           <p>
-            Hi, I am Sai Arunesh, 22 years old UI Developer working currently
-            with Caterpillar. I am skilled in Embedded Programming, Internet of
-            Things, Python, C, C++, Raspberry Pi, Arduino, Beagle Bone Black and
-            front end web development in AngularJS. Graduated with Bachelor of
-            Engineering degree focused in Electronics and Communication
-            Engineering from MIT, Anna University
+            Hi, I am Sai Arunesh, 22 years old working currently working as a UI
+            Developer with Caterpillar Inc. , Chennai, India. I am skilled in
+            Embedded Programming, Internet of Things, Python, C, C++, Raspberry
+            Pi, Arduino, Beagle Bone Black and front end web development in
+            AngularJS. Graduated with Bachelor of Engineering degree focused in
+            Electronics and Communication Engineering from MIT, Anna University
           </p>
         </div>
       </section>
+      <secion class="projects"> </secion>
     </main>
   </body>
 </html>
