--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&family=Ubuntu:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./stylesheet.css" />
@@ -47,7 +47,20 @@
           </p>
         </div>
       </section>
-      <secion class="projects"> </secion>
+      <secion id="resume">
+        <div class="resume-wrapper">
+          <h1>Download Resume</h1>
+          <a
+            href="https://drive.google.com/file/d/12XF1XNfXPrBEMd1HpbB1QULQnA8CMxUa/view?usp=sharing"
+            target="_blank"
+          >
+            <img
+              src="https://icons.iconarchive.com/icons/dtafalonso/android-lollipop/256/Downloads-icon.png"
+              alt="Download-icon"
+            />
+          </a>
+        </div>
+      </secion>
     </main>
   </body>
 </html>
