--- a/index.html
+++ b/index.html
@@ -62,20 +62,22 @@ ________________________________________________________________________________
           </p>
         </div>
       </section>
-      <secion id="resume">
-        <div class="resume-wrapper">
-          <h1>Download Resume</h1>
-          <a
-            href="https://drive.google.com/file/d/12XF1XNfXPrBEMd1HpbB1QULQnA8CMxUa/view?usp=sharing"
-            target="_blank"
-          >
+      <a
+        href="https://drive.google.com/file/d/12XF1XNfXPrBEMd1HpbB1QULQnA8CMxUa/view?usp=sharing"
+        target="_blank"
+        title="Click to open Resume"
+      >
+        <secion id="resume">
+          <div class="resume-wrapper">
+            <h1>Download Resume</h1>
+
             <img
               src="https://icons.iconarchive.com/icons/dtafalonso/android-lollipop/256/Downloads-icon.png"
               alt="Download-icon"
             />
-          </a>
-        </div>
-      </secion>
+          </div>
+        </secion>
+      </a>
 
       <section id="contact">
         <div class="contact-wrapper">
