--- a/index.html
+++ b/index.html
@@ -66,10 +66,13 @@ ________________________________________________________________________________
         href="https://drive.google.com/file/d/12XF1XNfXPrBEMd1HpbB1QULQnA8CMxUa/view?usp=sharing"
         target="_blank"
         title="Click to open Resume"
+        style="text-decoration: none"
       >
         <secion id="resume">
           <div class="resume-wrapper">
-            <h1>Download Resume</h1>
+            <div class="card-header">
+              <h1>Download Resume</h1>
+            </div>
 
             <img
               src="https://icons.iconarchive.com/icons/dtafalonso/android-lollipop/256/Downloads-icon.png"
