--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@ Greetings !
 ________________________________________________________________________________________
 
 The website is still being developed Sorry for the bugs
+
+Please view on landscape only
 ________________________________________________________________________________________
 
  -->
