--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@ ________________________________________________________________________________
       </nav>
       <div class="introduction">
         <div class="intro-text">
-          <h1>Sai Arunesh</h1>
+          <div>
+            <h1>Sai Arunesh <span></span></h1>
+          </div>
           <p>I am a <b>UI Developer</b></p>
         </div>
       </div>
