added intro text para anima

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@ ________________________________________________________________________________
           <div>
             <h1>Sai Arunesh <span></span></h1>
           </div>
-          <p>I am a <b>UI Developer</b></p>
+          <div>
+            <p>I am a <b>UI Developer</b> <span></span></p>
+          </div>
         </div>
       </div>
     </section>
