--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 Greetings !
 ________________________________________________________________________________________
 
-The website is still being developed Sorry for the bugs
+The website is still being developed Sorry for the bugs and place holder text
 
 Please view on landscape only
 ________________________________________________________________________________________
