--- a/index.html
+++ b/index.html
@@ -91,67 +91,50 @@ ________________________________________________________________________________
       <section id="projects">
         <div class="projects">
           <div class="project-header">
-            <h1>PROJECTS</h1>
+            <h1>projects</h1>
           </div>
           <div class="project-item-wrapper">
             <div class="project-item">
-              <h2>Web Design</h2>
+              <h2>Lora guiding system for Fishermen</h2>
+              <p><i> Nov 2019 – Apr 2020</i></p>
               <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's standard dummy
-                text ever since the 1500s, when an unknown printer took a galley
-                of type and scrambled it to make a type specimen book. It has
-                survived not only five centuries, but also the leap into
-                electronic typesetting, remaining essentially unchanged. It was
-                popularised in the 1960s with the release of Letraset sheets
-                containing Lorem Ipsum passages, and more recently with desktop
-                publishing software like Aldus PageMaker including versions of
-                Lorem Ipsum.
+                This was done using STM32 Nucleo L073RZ board &
+                <strong>SX1272MB2XAS LoRa Shield (node to node)</strong>
+                utilising GPS positioning system , SOS alert,Duplex
+                Communication, Border Crossing warning along with Cloud backed
+                live location plot monitoring and Data Logging using Adafruit.io
               </p>
             </div>
             <div class="project-item">
-              <h2>Web Design</h2>
+              <h2>RFID based attendance system using Telegram</h2>
+              <p><i> Jul 2019 – Oct 2019 </i></p>
               <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's standard dummy
-                text ever since the 1500s, when an unknown printer took a galley
-                of type and scrambled it to make a type specimen book. It has
-                survived not only five centuries, but also the leap into
-                electronic typesetting, remaining essentially unchanged. It was
-                popularised in the 1960s with the release of Letraset sheets
-                containing Lorem Ipsum passages, and more recently with desktop
-                publishing software like Aldus PageMaker including versions of
-                Lorem Ipsum.
+                An Attendance system controlled by Raspberry Pi . The unique
+                feature being that automated messages are sent regarding details
+                of late entrants & absenteeism via Telegram API to respective
+                parents/guardians.
               </p>
             </div>
             <div class="project-item">
-              <h2>Web Design</h2>
+              <h2>IOT based Home Automation system</h2>
+              <p><i> Dec 2018 – Mar 2019 </i></p>
+
               <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's standard dummy
-                text ever since the 1500s, when an unknown printer took a galley
-                of type and scrambled it to make a type specimen book. It has
-                survived not only five centuries, but also the leap into
-                electronic typesetting, remaining essentially unchanged. It was
-                popularised in the 1960s with the release of Letraset sheets
-                containing Lorem Ipsum passages, and more recently with desktop
-                publishing software like Aldus PageMaker including versions of
-                Lorem Ipsum.
+                Made Mobile phone Controlled High voltage appliances using Blynk
+                App ,Motion Detection and warning system using Raspberry Pi and
+                automatic Door unlock utilising speech to text engine (through
+                Google API)
               </p>
             </div>
             <div class="project-item">
-              <h2>Web Design</h2>
+              <h2>FIRST ™ Tech Challenge Bot</h2>
+              <p><i> May 2018 </i></p>
+
               <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's standard dummy
-                text ever since the 1500s, when an unknown printer took a galley
-                of type and scrambled it to make a type specimen book. It has
-                survived not only five centuries, but also the leap into
-                electronic typesetting, remaining essentially unchanged. It was
-                popularised in the 1960s with the release of Letraset sheets
-                containing Lorem Ipsum passages, and more recently with desktop
-                publishing software like Aldus PageMaker including versions of
-                Lorem Ipsum.
+                A Robot for FTC competiton was made with manual and autonomous
+                movement and gripping mechanism and an array of sensors were
+                used along with the ability to climb on steeper surfaces using
+                BegaleBone Black Dev Board
               </p>
             </div>
           </div>
