highlighted dev board

--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@ ________________________________________________________________________________
               <h2>RFID based attendance system using Telegram</h2>
               <p><i> Jul 2019 – Oct 2019 </i></p>
               <p>
-                An Attendance system controlled by Raspberry Pi . The unique
-                feature being that automated messages are sent regarding details
-                of late entrants & absenteeism via Telegram API to respective
-                parents/guardians.
+                An Attendance system controlled by
+                <strong> Raspberry Pi</strong> . The unique feature being that
+                automated messages are sent regarding details of late entrants &
+                absenteeism via Telegram API to respective parents/guardians.
               </p>
             </div>
             <div class="project-item">
@@ -134,7 +134,7 @@ ________________________________________________________________________________
                 A Robot for FTC competiton was made with manual and autonomous
                 movement and gripping mechanism and an array of sensors were
                 used along with the ability to climb on steeper surfaces using
-                BegaleBone Black Dev Board
+                <strong> BeagleBone Black Dev Board</strong>
               </p>
             </div>
           </div>
