--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@ ________________________________________________________________________________
         <ul class="nav-links">
           <li><a href="#about" class="nav-link">About</a></li>
           <li><a href="#resume" class="nav-link">Resume</a></li>
+          <li><a href="#projects" class="nav-link">Projects</a></li>
+
           <li><a href="#contact" class="nav-link">Reach Out</a></li>
         </ul>
       </nav>
