updated linkedin link

--- a/index.html
+++ b/index.html
@@ -147,14 +147,11 @@ ________________________________________________________________________________
         <div class="contact-wrapper">
           <p>Reach out to me on</p>
           <div class="icon-wrapper">
-            <a
-              href="https://www.linkedin.com/in/sai-arunesh-v-s-b1063b166/"
-              target="_blank"
-            >
+            <a href="https://www.linkedin.com/in/sai-arunesh/" target="_blank">
               <img
                 class="icon"
                 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSv1TRjzY8iaO307JPz_hy2EW8BB7xqzbR83w&usqp=CAU"
-                alt="https://www.linkedin.com/in/sai-arunesh-v-s-b1063b166/"
+                alt="https://www.linkedin.com/in/sai-arunesh"
               />
             </a>
             <a href="https://twitter.com/sai_arunesh" target="_blank">
