resume responsive fix

--- a/index.html
+++ b/index.html
@@ -78,10 +78,9 @@ ________________________________________________________________________________
       >
         <secion id="resume">
           <div class="resume-wrapper">
-            <div class="card-header">
+            <div class="resume-title">
               <h1>Download Resume</h1>
             </div>
-
             <img
               src="https://icons.iconarchive.com/icons/dtafalonso/android-lollipop/256/Downloads-icon.png"
               alt="Download-icon"
