--- a/index.html
+++ b/index.html
@@ -167,6 +167,23 @@ ________________________________________________________________________________
               onclick="copyToClipboard('vssaiarunesh@gmail.com')"
             />
           </div>
+          <div class="contact-form-wrapper">
+            <h1 style="align-self: center">Send a Message to me !</h1>
+            <form action="">
+              <div class="row">
+                <label for="name"><h1>Name</h1></label>
+                <input id="name" for="name" type="text" />
+              </div>
+              <div class="row">
+                <label for="email"><h1>Mail id</h1></label>
+                <input id="email" for="email" type="email" />
+              </div>
+              <div class="row">
+                <label for="message"><h1>Message</h1></label>
+                <textarea name="message" id="" cols="500" rows="15"></textarea>
+              </div>
+            </form>
+          </div>
         </div>
       </section>
     </main>
