--- a/index.html
+++ b/index.html
@@ -144,7 +144,29 @@ ________________________________________________________________________________
 
       <section id="contact">
         <div class="contact-wrapper">
-          <p>Reach out to me on</p>
+          <div class="contact-header">
+            <h1>Contact Me</h1>
+          </div>
+          <div class="contact-form-wrapper">
+            <h1 style="align-self: center">Send a Message to me !</h1>
+            <form action="">
+              <div class="row">
+                <label for="name"><h1>Name</h1></label>
+                <input id="name" for="name" type="text" />
+              </div>
+              <div class="row">
+                <label for="email"><h1>Mail id</h1></label>
+                <input id="email" for="email" type="email" />
+              </div>
+              <div class="row">
+                <label for="message"><h1>Message</h1></label>
+                <textarea name="message" id="" cols="500" rows="15"></textarea>
+              </div>
+            </form>
+          </div>
+        </div>
+        <div class="also-wrap">
+          <p>Also Reach out to me on</p>
           <div class="icon-wrapper">
             <a href="https://www.linkedin.com/in/sai-arunesh/" target="_blank">
               <img
@@ -166,23 +188,6 @@ ________________________________________________________________________________
               style="cursor: pointer"
               onclick="copyToClipboard('vssaiarunesh@gmail.com')"
             />
-          </div>
-          <div class="contact-form-wrapper">
-            <h1 style="align-self: center">Send a Message to me !</h1>
-            <form action="">
-              <div class="row">
-                <label for="name"><h1>Name</h1></label>
-                <input id="name" for="name" type="text" />
-              </div>
-              <div class="row">
-                <label for="email"><h1>Mail id</h1></label>
-                <input id="email" for="email" type="email" />
-              </div>
-              <div class="row">
-                <label for="message"><h1>Message</h1></label>
-                <textarea name="message" id="" cols="500" rows="15"></textarea>
-              </div>
-            </form>
           </div>
         </div>
       </section>
