--- a/index.html
+++ b/index.html
@@ -149,19 +149,20 @@ ________________________________________________________________________________
           </div>
           <div class="contact-form-wrapper">
             <h1 style="align-self: center">Send a Message to me !</h1>
-            <form action="">
+            <form action="https://formspree.io/f/mjvpjado" method="POST">
               <div class="row">
                 <label for="name"><h1>Name</h1></label>
-                <input id="name" for="name" type="text" />
+                <input id="name" for="name" type="text" name="name" />
               </div>
               <div class="row">
                 <label for="email"><h1>Mail id</h1></label>
-                <input id="email" for="email" type="email" />
+                <input id="email" for="email" type="email" name="reply to" />
               </div>
               <div class="row">
                 <label for="message"><h1>Message</h1></label>
                 <textarea name="message" id="" cols="500" rows="15"></textarea>
               </div>
+              <div class="row"><button type="submit">Send</button></div>
             </form>
           </div>
         </div>
