--- a/index.html
+++ b/index.html
@@ -152,15 +152,27 @@ ________________________________________________________________________________
             <form action="https://formspree.io/f/mjvpjado" method="POST">
               <div class="row">
                 <label for="name"><h1>Name</h1></label>
-                <input id="name" for="name" type="text" name="name" />
+                <input id="name" for="name" type="text" name="name" required />
               </div>
               <div class="row">
                 <label for="email"><h1>Mail id</h1></label>
-                <input id="email" for="email" type="email" name="reply to" />
+                <input
+                  id="email"
+                  for="email"
+                  type="email"
+                  name="reply to"
+                  required
+                />
               </div>
               <div class="row">
                 <label for="message"><h1>Message</h1></label>
-                <textarea name="message" id="" cols="500" rows="15"></textarea>
+                <textarea
+                  name="message"
+                  id=""
+                  cols="500"
+                  rows="15"
+                  required
+                ></textarea>
               </div>
               <div class="row"><button type="submit">Swoosshhhhh</button></div>
             </form>
