--- a/index.html
+++ b/index.html
@@ -145,10 +145,9 @@ ________________________________________________________________________________
       <section id="contact">
         <div class="contact-wrapper">
           <div class="contact-header">
-            <h1>Contact Me</h1>
+            <h1>Send a Message to me !</h1>
           </div>
           <div class="contact-form-wrapper">
-            <h1 style="align-self: center">Send a Message to me !</h1>
             <form action="https://formspree.io/f/mjvpjado" method="POST">
               <div class="row">
                 <label for="name"><h1>Name</h1></label>
