--- a/index.html
+++ b/index.html
@@ -170,10 +170,13 @@ ________________________________________________________________________________
                   id=""
                   cols="500"
                   rows="15"
+                  style="resize: none"
                   required
                 ></textarea>
               </div>
-              <div class="row"><button type="submit">Swoosshhhhh</button></div>
+              <div class="row">
+                <button type="submit">Swoosshhhhh</button>
+              </div>
             </form>
           </div>
         </div>
