fixed submit btn text

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ ________________________________________________________________________________
                 ></textarea>
               </div>
               <div class="row">
-                <button type="submit">Swoosshhhhh</button>
+                <button type="submit">Submit</button>
               </div>
             </form>
           </div>
