--- a/neogProjects.html
+++ b/neogProjects.html
@@ -36,6 +36,30 @@
                     <a
                         href="https://replit.com/@SaiArunesh/markTwo-phone-quiz?embed=1&output=1#index.js">Live</a>
                 </div>
+                <div class="project-item">
+                    <h2>Place holder</h2>
+                    <p><i>Aug 2021</i></p>
+                    <p>Answers are intentionally not what you expect</p>
+                    <a href="https://github.com/SaiArunesh/nc-m2">Source Code</a>
+                    <a
+                        href="https://replit.com/@SaiArunesh/markTwo-phone-quiz?embed=1&output=1#index.js">Live</a>
+                </div>
+                <div class="project-item">
+                    <h2>Place holder</h2>
+                    <p><i>Aug 2021</i></p>
+                    <p>Answers are intentionally not what you expect</p>
+                    <a href="https://github.com/SaiArunesh/nc-m2">Source Code</a>
+                    <a
+                        href="https://replit.com/@SaiArunesh/markTwo-phone-quiz?embed=1&output=1#index.js">Live</a>
+                </div>
+                <div class="project-item">
+                    <h2>Place holder</h2>
+                    <p><i>Aug 2021</i></p>
+                    <p>Answers are intentionally not what you expect</p>
+                    <a href="https://github.com/SaiArunesh/nc-m2">Source Code</a>
+                    <a
+                        href="https://replit.com/@SaiArunesh/markTwo-phone-quiz?embed=1&output=1#index.js">Live</a>
+                </div>
         </div>
     </section>
 
