--- a/neogProjects.html
+++ b/neogProjects.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./stylesheet.css" />
+    <link rel="stylesheet" href="./override.css" />
     <link rel="icon" href="./assets/SA_Logo.png" />
     <title>Sai's Portfolio</title>
 </head>
