--- a/neogProjects.html
+++ b/neogProjects.html
@@ -38,12 +38,12 @@
                         href="https://replit.com/@SaiArunesh/markTwo-phone-quiz?embed=1&output=1#index.js">Live</a>
                 </div>
                 <div class="project-item">
-                    <h2>Place holder</h2>
+                    <h2>Banana Translator</h2>
                     <p><i>Aug 2021</i></p>
-                    <p>Answers are intentionally not what you expect</p>
-                    <a href="https://github.com/SaiArunesh/nc-m2">Source Code</a>
+                    <p>Bellooooo</p>
+                    <a href="https://github.com/SaiArunesh/nc-m6-minion-speak">Source Code</a>
                     <a
-                        href="https://replit.com/@SaiArunesh/markTwo-phone-quiz?embed=1&output=1#index.js">Live</a>
+                        href="https://banana-translator-99.netlify.app/">Live</a>
                 </div>
                 <div class="project-item">
                     <h2>Place holder</h2>
