added games translator link targets are now blank

--- a/neogProjects.html
+++ b/neogProjects.html
@@ -23,9 +23,9 @@
                     <h2>CLI Quiz about me</h2>
                     <p><i>Aug 2021</i></p>
                     <p>Answers are intentionally not what you expect</p>
-                    <a href="https://github.com/SaiArunesh/nc-m1">Source Code</a>
+                    <a href="https://github.com/SaiArunesh/nc-m1" target="_blank" >Source Code</a>
                     <a
-                        href="https://replit.com/@SaiArunesh/L01-EX15-print-the-final-score-to-the-user?embed=1&output=1">
+                        href="https://replit.com/@SaiArunesh/L01-EX15-print-the-final-score-to-the-user?embed=1&output=1" target="_blank" >
                         Live
                     </a>
                 </div>
@@ -33,33 +33,33 @@
                     <h2>CLI Marvel Quiz</h2>
                     <p><i>Aug 2021</i></p>
                     <p>Answers are intentionally not what you expect</p>
-                    <a href="https://github.com/SaiArunesh/nc-m2">Source Code</a>
+                    <a href="https://github.com/SaiArunesh/nc-m2" target="_blank" >Source Code</a>
                     <a
-                        href="https://replit.com/@SaiArunesh/markTwo-phone-quiz?embed=1&output=1#index.js">Live</a>
+                        href="https://replit.com/@SaiArunesh/markTwo-phone-quiz?embed=1&output=1#index.js" target="_blank" >Live</a>
                 </div>
                 <div class="project-item">
                     <h2>Banana Translator</h2>
                     <p><i>Aug 2021</i></p>
                     <p>Bellooooo</p>
-                    <a href="https://github.com/SaiArunesh/nc-m6-minion-speak">Source Code</a>
+                    <a href="https://github.com/SaiArunesh/nc-m6-minion-speak" target="_blank" >Source Code</a>
                     <a
-                        href="https://banana-translator-99.netlify.app/">Live</a>
+                        href="https://banana-translator-99.netlify.app/" target="_blank" >Live</a>
                 </div>
                 <div class="project-item">
                     <h2>Yoda Translator</h2>
                     <p><i>Aug 2021</i></p>
                     <p>With you, May the force be</p>
-                    <a href="https://github.com/SaiArunesh/nc-m7-yoda-speak">Source Code</a>
+                    <a href="https://github.com/SaiArunesh/nc-m7-yoda-speak" target="_blank" >Source Code</a>
                     <a
-                        href="https://yoda-translator-99.netlify.app/">Live</a>
+                        href="https://yoda-translator-99.netlify.app/" target="_blank" >Live</a>
                 </div>
                 <div class="project-item">
-                    <h2>Place holder</h2>
+                    <h2>Game Recommendations App</h2>
                     <p><i>Aug 2021</i></p>
-                    <p>Answers are intentionally not what you expect</p>
-                    <a href="https://github.com/SaiArunesh/nc-m2">Source Code</a>
+                    <p>Warning: Very cringe-y</p>
+                    <a href="https://github.com/SaiArunesh/nc-m9-game-recommendation-app" target="_blank" >Source Code</a>
                     <a
-                        href="https://replit.com/@SaiArunesh/markTwo-phone-quiz?embed=1&output=1#index.js">Live</a>
+                        href="https://12rjc.csb.app/" target="_blank" >Live</a>
                 </div>
         </div>
     </section>
