update nc-m9 link

--- a/neogProjects.html
+++ b/neogProjects.html
@@ -59,7 +59,7 @@
                     <p>Warning: Very cringe-y</p>
                     <a href="https://github.com/SaiArunesh/nc-m9-game-recommendation-app" target="_blank" >Source Code</a>
                     <a
-                        href="https://12rjc.csb.app/" target="_blank" >Live</a>
+                        href="https://epic-y-games.netlify.app/" target="_blank" >Live</a>
                 </div>
         </div>
     </section>
