--- a/neogProjects.html
+++ b/neogProjects.html
@@ -61,6 +61,15 @@
                     <a
                         href="https://epic-y-games.netlify.app/" target="_blank" >Live</a>
                 </div>
+
+                <div class="project-item">
+                    <h2>Cash Register React App</h2>
+                    <p><i>Aug 2021</i></p>
+                    <p>very Jugaad way of doing. need to learn react</p>
+                    <a href="https://github.com/SaiArunesh/nc-m10-cash-reegister-react" target="_blank" >Source Code</a>
+                    <a
+                        href="https://codesandbox.io/s/github/SaiArunesh/nc-m10-cash-reegister-react" target="_blank" >Live</a>
+                </div>
         </div>
     </section>
 
