updated about me

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ ________________________________________________________________________________
           <h1>Sai Arunesh <span></span></h1>
         </div>
         <div>
-          <p>I am a <b>UI Developer</b> <span></span></p>
+          <p>I am a <b>Full Stack Developer</b> <span></span></p>
         </div>
       </div>
     </div>
@@ -60,7 +60,7 @@ ________________________________________________________________________________
       <div class="about-me-details">
         <h1>About Me</h1>
         <p>
-          Hi, I am Sai Arunesh, 22 years old working currently working as a UI
+          Hi, I am Sai Arunesh, 22 years old working currently working as a full stack (C++, Angular)
           Developer with Caterpillar Inc. , Chennai, India. I am skilled in
           Embedded Programming, Internet of Things, Python, C, C++, Raspberry
           Pi, Arduino, Beagle Bone Black and front end web development in
